--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,10 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+dependencies {
+    classpath 'com.google.gms:google-services:4.3.15' // 최신 버전으로 설정
+}
+
 android {
     namespace = "com.example.pickit_flutter"
     compileSdk = flutter.compileSdkVersion
@@ -41,6 +45,8 @@ android {
         }
     }
 }
+
+
 
 flutter {
     source = "../.."
