--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,9 +8,6 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-dependencies {
-    classpath 'com.google.gms:google-services:4.3.15' // 최신 버전으로 설정
-}
 
 android {
     namespace = "com.example.pickit_flutter"
@@ -50,4 +47,8 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-analytics:21.2.0' // Example Firebase module
 }
