--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,3 +17,21 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.0' // Android Gradle Plugin
+        classpath 'com.google.gms:google-services:4.3.15' // 추가된 google-services
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
