--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/images/login.png
-    - assets/images/PickiT.jpg
+    - assets/images/login.jpg
+    - assets/images/PickiT.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
