스크랩, API요약 팝업창 구현, 중복 함수 삭제
news_service에 있던 getFilteredFeeds() -> getFilterFeeds.dart에 존재

fetchNews(), getMyNews(), addMyNews() 메소드 삭제
-> global.dart에 존재

삭제후 각 기능을 올바른 위치에 맞도록 수정

news_controller, article_screen, my_scrapscreen, home_screen 등등 수정

스크랩한 기사가 파이어베이스에 추가되고 앱 화면에 출력되는 것까지 구현

본문 요약본 같은 경우 WebView 형식을 사용하기 위해 수정 중 flutter sdk 버전이 맞지 않는다고 해서 일단 커밋 후 진행 예정이고

팝업창을 띄워 그 창에서 요약본 텍스트가 출력되도록함 _showSummaryPopup

요약 api를 가져오는 건 getSummary를 경유

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,6 +14,10 @@ android {
     compileSdk = flutter.compileSdkVersion
     ndkVersion = "25.1.8937393"
 
+    defaultConfig {
+        minSdkVersion flutter.minSdkVersion
+    }
+
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
