--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  webview_flutter: ^4.0.0
   url_launcher: ^6.1.7
   http: ^1.2.2
   firebase_core: ^3.6.0
