--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   webview_flutter: ^4.2.3
   url_launcher: ^6.1.7
   http: ^1.2.2
+  html: ^0.15.0 # HTML 파싱
   firebase_core: ^3.6.0
   firebase_database: ^11.1.4
   cupertino_icons: ^1.0.8
