--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ build/
 # If you're building an application, you may want to check-in your pubspec.lock
 pubspec.lock
 
+__pycache__/
+*.pyc
+
+
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
